# ai-dev-system

./: .env.example  .gitignore  LICENSE  README-ZH.md  README.md  api_server.py  config.py  main.py  main_multi.py  pyproject.toml
.rag_cache/: chroma.sqlite3
agents/: coordinator.py  dev_agent.py  pipeline_models.py  pm_agent.py  prompts.py  qa_agent.py
static/: index.html
tests/: test_dev_agent.py  test_file_manager.py  test_runner_test.py
tools/: file_manager.py  github_tool.py  rag_engine.py  test_runner.py
